<resources>
    <string name="app_name" translatable="false">LCSI - Wildlife Tracker</string>

    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="title_activity_item_list">ItemListActivity</string>
    <string name="title_activity_transect_detail">Transect</string>
    <string name="title_activity_weather">Weather</string>
    <string name="title_activity_habitat_detail">Habitat</string>
    <string name="title_activity_finding_detail">Finding</string>

    <string-array name="findingConfidenceTypes">
        <item></item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="beforeAfter">
        <item></item>
        <item>Before</item>
        <item>After</item>
    </string-array>

    <string-array name="findingBeforeAfterRecentSnowValues">
        <item></item>
        <item>Before</item>
        <item>After</item>
    </string-array>

    <string-array name="generalDirection">
        <item></item>
        <item>North</item>
        <item>South</item>
        <item>East</item>
        <item>West</item>
        <item>North-east</item>
        <item>North-west</item>
        <item>South-east</item>
        <item>South-west</item>
    </string-array>

    <string-array name="latitudeDirection">
        <item>N</item>
        <item>S</item>
    </string-array>

    <string-array name="longitudeDirection">
        <item>E</item>
        <item>W</item>
    </string-array>

    <string-array name="footprintFindingGroupValues" >
        <item></item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
    </string-array>

    <string name="title_activity_photos_list">Photos</string>
    <string name="title_activity_finding_sites">Finding sites</string>
    <string name="title_activity_transects_list">Transects</string>
    <string name="action_habitat">Habitat</string>
    <string name="transect_action_weather">Weather</string>
    <string name="transect_action_findings">Findings</string>
    <string name="transect_action_add_finding">Add finding site</string>
    <string name="transect_finding_action_add_photo">Add photo</string>
    <string name="transect_finding_action_sampes">Samples</string>
    <string name="transect_finding_action_photos">Photos</string>
    <string name="samples">Samples</string>
    <string name="action_save">Save</string>
    <string name="transect_finding_action_add_sample">Add sample</string>
    <string name="action_location_acquire">Location</string>
    <string name="feces_finding_detail">Feces finding</string>
    <string name="footprints_finding_detail">Footprint finding</string>
    <string name="other_finding_detail">Other finding</string>
    <string name="title_activity_finding_site">Finding site</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="elevation">Elevation</string>
    <string name="type">Type</string>
    <string name="track">Track</string>
    <string name="forest_age">Forest age</string>
    <string name="tree_type">Tree type</string>
    <string name="forest_type">Forest Type</string>
    <string name="new_transect">New transect</string>
    <string name="view_transcts">View transects</string>
    <string name="add_photo">Add photo</string>
    <string name="tracker_name">Tracker name</string>
    <string name="location_format">Location format</string>
    <string name="decimal">Decimal</string>
    <string name="degrees_minutes_seconds">Degrees Minutes Seconds</string>
    <string name="version">Version</string>
    <string name="sample">Sample</string>
    <string name="text">text</string>
    <string name="id">id</string>
    <string name="feces">Feces</string>
    <string name="other">Other</string>
    <string name="footprints">Footprints</string>
    <string name="specie">Specie</string>
    <string name="sunshine">Sunshine</string>
    <string name="square">Square:</string>
    <string name="sample_number">Sample number</string>
    <string name="animals">#animals</string>
    <string name="number">Number:</string>
    <string name="square_num">#square</string>
    <string name="number_of_animals">Number of animals</string>
    <string name="direction">Direction</string>
    <string name="stride">Stride</string>
    <string name="size">Size</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="substract">Substract</string>
    <string name="confidence">Confidence</string>
    <string name="age">Age</string>
    <string name="localisation">Localisation</string>
    <string name="route_name">Route name</string>
    <string name="start_date_and_time">Start date and time</string>
    <string name="end_date_and_time">End date and time</string>
    <string name="start_location">Start location</string>
    <string name="end_location">End location</string>
    <string name="start_transect">Start transect</string>
    <string name="end_transect">End transect</string>
    <string name="add_sample">Add sample</string>
    <string name="feces_prey">Feces prey</string>
    <string name="feces_state">Feces state</string>
    <string name="evidence">Evidence</string>
    <string name="observations">Observations</string>
    <string name="location">Location</string>
    <string name="add_footprints">Add Footprints</string>
    <string name="add_feces">Add Feces</string>
    <string name="add_urine">Add urine</string>
    <string name="add_other">Add Other</string>
    <string name="add_hairs">Add Hairs</string>
    <string name="add_scratches">Add Scratches</string>
    <string name="cloudy">cloudy</string>
    <string name="sunny">sunny</string>
    <string name="wind">Wind</string>
    <string name="low">low</string>
    <string name="high">high</string>
    <string name="raining">Raining</string>
    <string name="light">light</string>
    <string name="heavy">heavy</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="snow_depth">Snow depth</string>
    <string name="new_snow_depth">New snow depth</string>
    <string name="last_time_snowed_rained">Last time snowed/rained</string>
    <string name="hours_ago">hours ago</string>
    <string name="save">save</string>
    <string name="language">Language</string>
    <string name="languageEnglish">English</string>
    <string name="languageSlovak">Slovenský</string>
    <string name="photos_fragment_name">Photos</string>
    <string name="habitat_fragment_name">Habitat</string>
    <string name="transect_fragment_name">Transect</string>
    <string name="finding_sites_fragment_name">Finding sites</string>
    <string name="weather_fragment_name">Weather</string>
    <string name="location_not_acquired">Location not acquired</string>
    <string name="operation_canceled">Operation canceled</string>
    <string name="gps_provider_not_available">Gps provider not available</string>
    <string name="problem_with_creating">Problem with creating: %1$s</string>
    <string name="transect_saved">Transect saved</string>
    <string name="transect_finding_saved">Finding saved</string>
    <string name="transect_not_valid">Transect not valid</string>
    <string name="feces_saved">Feces saved</string>
    <string name="footprints_saved">Footprints saved</string>
    <string name="other_saved">Other saved</string>
    <string name="habitat_created">Habitat created</string>
    <string name="habitat_modified">Habitat modified</string>
    <string name="transect_finding_site_created">Transect finding site created</string>
    <string name="transect_finding_site_modified">Transect finding site modified</string>
    <string name="detail_display_problem">Problem with displying tranect finding detail.</string>
    <string name="excel_export_path">Exported to: %1$s</string>
    <string name="validation_must_not_be_empty">Must not be empty.</string>
    <string name="validation_max_value">Max value is %1$f.</string>
    <string name="validation_min_value">Min value is %1$f.</string>
    <string name="new_item">New item</string>
    <string name="new_item_type_name">Typ new item name:</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_change_language_title">Change telephone language</string>
    <string name="dialog_change_language">Change language</string>
    <string name="dialog_change_language_message">This will change language of your telephone. Are you sure you want to proceed?</string>
    <string name="dialog_end_transect_title">End transect</string>
    <string name="dialog_end_transect">Do you really want to end transect?</string>
    <string name="validation_must_be_number">Number format: 1.23</string>
    <string name="dialog_save_changes_before_leave">Save changes before leave?</string>
    <string name="dialog_discard_and_leave">Discard and leave</string>
    <string name="saved">Saved</string>
    <string name="dialog_open_settings">App needs your name</string>
    <string name="dialog_open_settings_message">You name will be shown in data export in Excel format
        and your initials will be used to generate numbers for samples that you collect.</string>
    <string name="error_occured">Error occured</string>
    <string name="group">Group</string>
    <string name="collected">Sample</string>
    <string name="comment">Comment</string>
    <string name="privacyPolicyLabel">Privacy Policy</string>
    <string name="showPrivacyPolicy">Show Privacy Policy</string>

</resources>
