<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.detail.findings.TransectFindingDetailActivity">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/transect_finding_action_habitat"
        android:orderInCategory="100"
        android:title="@string/action_habitat"
        app:showAsAction="never" />

    <item
        android:id="@+id/transect_finding_action_samples"
        android:orderInCategory="100"
        android:title="@string/transect_finding_action_sampes"
        app:showAsAction="never" />

    <item
        android:id="@+id/transect_finding_action_add_sample"
        android:orderInCategory="100"
        android:title="@string/transect_finding_action_add_sample"
        app:showAsAction="never" />

    <item
        android:id="@+id/transect_finding_action_photos"
        android:orderInCategory="100"
        android:title="@string/transect_finding_action_photos"
        app:showAsAction="never" />

    <item
        android:id="@+id/transect_finding_action_add_photo"
        android:orderInCategory="100"
        android:title="@string/transect_finding_action_add_photo"
        app:showAsAction="never" />


</menu>
