<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.wecode.animaltracker.activity.detail.HabitatDetailActivity">

    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:orderInCategory="100"
        android:icon="@drawable/ic_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/transect_finding_action_photos"
        android:orderInCategory="100"
        android:title="@string/transect_finding_action_photos"
        app:showAsAction="never" />

    <item
        android:id="@+id/transect_finding_action_add_photo"
        android:orderInCategory="100"
        android:title="@string/transect_finding_action_add_photo"
        app:showAsAction="never" />

</menu>
