<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wecode.animaltracker.activity.SettingsActivity"
    android:id="@+id/activitySettings">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/scrollView"
        android:fillViewport="false"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tracker_name"
                    android:id="@+id/textView33"
                    android:layout_gravity="center_vertical" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settingsTrackerName"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="120dp"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/location_format"
                        android:id="@+id/textView34"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/decimal"
                            android:id="@+id/settingsLocationDecimal"
                            android:checked="false"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.5" />

                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/degrees_minutes_seconds"
                            android:id="@+id/settingsLocationDMS"
                            android:checked="false"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.5" />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="120dp"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/language"
                        android:id="@+id/textView36"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">


                    <Button
                        android:text="@string/dialog_change_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button"
                        android:layout_weight="1"
                        android:onClick="changeLanguage" />
                </LinearLayout>

            </LinearLayout>




            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/privacyPolicyLabel"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/privacyPolicyLabel"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:text="@string/showPrivacyPolicy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/privacyPolicyButton"
                    android:layout_weight="1"
                    android:onClick="showPrivacyPolicy" />

             </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/version"
                    android:id="@+id/versionLabel"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/versionText"
                    android:layout_gravity="center_vertical" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>