<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.detail.findings.TransectFindingFecesDetailActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:animateLayoutChanges="true"
        android:fillViewport="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/outerLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/animal_tracker_row_height"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/findingFecesPreyLabel"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/feces_prey"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/findingFecesPreySpinner"
                    android:layout_weight="1"
                    android:spinnerMode="dialog"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/animal_tracker_row_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/findingFecesStateLabel"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/feces_state"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/findingFecesStateValue"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sampleLabel"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/collected"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_vertical" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="start|center_vertical">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/transect_finding_sample" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/substractLabel"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/substract"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_vertical" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/substract"
                    android:layout_weight="1"
                    android:spinnerMode="dialog"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/animal_tracker_row_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/findingConfidenceLabel"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/confidence"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/findingConfidenceValue"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="left|center_vertical"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/animal_tracker_row_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/footprintsAgeLabel"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_gravity="center_vertical" />

                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/age"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
