<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activity.location.EditLocationDMSFormatActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/scrollView"
        android:fillViewport="false" android:layout_below="@+id/toolbar" android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:text="@string/latitude"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView35"
                    android:layout_gravity="center_vertical" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:ems="10"
                    android:id="@+id/latitudeDecimal"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:text="@string/longitude"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView36"
                    android:layout_gravity="center_vertical" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:ems="10"
                    android:id="@+id/longitudeDecimal"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:text="@string/elevation"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView37"
                    android:layout_gravity="center_vertical" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/elevationDecimal"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
